best-practices-cel/disallow-default-namespace/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: not-default-ns
