best-practices-cel/disallow-default-namespace/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disallow-default-namespace
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disallow-default-namespace.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: disallow-default-namespace
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
  - name: step-03
    try:
    - apply:
        file: good-resources.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-default.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ds-default.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: job-default.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ss-default.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: deploy-default.yaml
